Mulpiple directives for diff updates, chunk rate limiting