@@ -5,25 +5,22 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.PriorityQueue;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 
 public class TopKProfile<T> implements Profile<T> {
 
     private final HashMap<T, Integer> samples;
-    private int maxCount;
     private int total;
 
-    public TopKProfile() {
-        this.samples = new HashMap<>();
+    public TopKProfile(int initialCapacity) {
+        this.samples = new HashMap<>(initialCapacity);
     }
 
     @Override
     public boolean addSample(T elem) {
         int newCount = samples.getOrDefault(elem, 0) + 1;
         samples.put(elem, newCount);
-        maxCount = Math.max(maxCount, newCount);
         total++;
         return newCount == 1;
     }
@@ -38,11 +35,11 @@ public class TopKProfile<T> implements Profile<T> {
     @Override
     public List<T> getTop(int k) {
         if (k < 1) {
-            throw new IllegalArgumentException("at least 1 top element should be specified");
+            throw new IllegalArgumentException("At least 1 top element should be specified.");
         }
         int n = samples.entrySet().size();
         if (n == 0) {
-            return Collections.emptyList();
+            return List.of();
         }
         var pq = new PriorityQueue<Map.Entry<T, Integer>>(n, DESC);
         pq.addAll(samples.entrySet());
@@ -55,8 +52,8 @@ public class TopKProfile<T> implements Profile<T> {
     }
 
     @Override
-    public int getTotal() {
-        return total;
+    public int size() {
+        return samples.size();
     }
 
     @Override
@@ -65,9 +62,13 @@ public class TopKProfile<T> implements Profile<T> {
     }
 
     @Override
+    public int total() {
+        return total;
+    }
+
+    @Override
     public void clear() {
         samples.clear();
-        maxCount = 0;
         total = 0;
     }
 }
